Modified training code

--- a/Crop_Yield_Prediction/Crop_Yield_Detection.ipynb
+++ b/Crop_Yield_Prediction/Crop_Yield_Detection.ipynb
@@ -270,7 +270,7 @@
         "# Convert yield from hg/ha to tonnes/ha (1 tonne = 1,000,000 hg)\n",
         "df['yield_tonnes_ha'] = df['hg/ha_yield'] / 10000\n",
         "\n",
-        "# Remove the original 'hg/ha_yield' column and the 'Unnamed: 0' column\n",
+        "# Remove 'hg/ha_yield' column and the 'Unnamed: 0' column\n",
         "df = df.drop(columns=['hg/ha_yield', 'Unnamed: 0'])\n",
         "\n",
         "print(\"\\nDataFrame after cleaning:\")\n",
@@ -395,15 +395,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "0fad6738"
-      },
-      "source": [
-        "Let's visualize the distribution of some key features after scaling."
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "## Linear Regression"
       ],
@@ -438,7 +429,7 @@
         "outputId": "d20efb09-df15-41af-8cbc-b6fcfc026609"
       },
       "source": [
-        "# Visualize actual vs. predicted yields for Linear Regression\n",
+        "# Actual vs. predicted yields\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.scatterplot(x=y_test, y=y_pred_linear_reg)\n",
         "plt.xlabel(\"Actual Yield (tonnes/ha)\")\n",
@@ -534,7 +525,7 @@
         "outputId": "eb53a2e6-1aef-4508-c2f7-f8a4cad59e96"
       },
       "source": [
-        "# Visualize actual vs. predicted yields for Decision Tree\n",
+        "# Visualize actual vs. predicted yields\n",
         "plt.figure(figsize=(10, 6))\n",
         "sns.scatterplot(x=y_test, y=y_pred_decision_tree)\n",
         "plt.xlabel(\"Actual Yield (tonnes/ha)\")\n",
@@ -653,15 +644,6 @@
           "execution_count": 94
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "lReEOM4OoWwS"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
